quick fix to remove extra whitespace under content

--- a/src/css/DynamicStyle.css
+++ b/src/css/DynamicStyle.css
@@ -8,6 +8,7 @@
     font-family: 'Lato', serif;
     font-style:normal;
     padding-top: calc(20vmin);
+	 margin-bottom: -250px;
 }
 .danceimg{
     width: calc(42vmin);
@@ -16,6 +17,7 @@
     position:relative;
     padding-right: calc(10vmin);
     top: calc(-45vmin);
+	 margin-bottom: -250px;
     right: calc(25vmin);
     float: right;
 }
